2006-09-21  Jim Meyering  <jim@meyering.net>

	* configure.ac: Require autoconf-2.60 and automake-1.9.6.
	* bootstrap: Import from coreutils.

2006-09-09  Jim Meyering  <jim@meyering.net>

	* Version 1.13.
	* configure.ac: Remove GNULIB_AUTOCONF_SNIPPET.
	(AC_INIT): Bump version to 1.13.
	Add AM_GNU_GETTEXT([external]).

	* .x-sc_unmarked_diagnostics: New file.

	* src/system.h: Update from coreutils, with some tiny changes.

	* src/cppi.l: Include "system.h" from %top to avoid redefinition
	warnings about cpp symbols like INT8_MAX that are defined in the
	generated cppi.c.

	* src/Makefile.am (cpp-cond.c): Prepend "#include <config.h>",
	when generating this file.

	* Makefile.cfg (local-checks-to-skip): Skip three of the checks
	that coreutils performs.

	* bootstrap: Update from coreutils.
	* bootstrap.conf: New file.

2005-09-13  Jim Meyering  <jim@meyering.net>

	* Version 1.12.

	* configure.ac: Use gl_EARLY and gl_INIT.
	Remove AC_GNU_SOURCE, gl_USE_SYSTEM_EXTENSIONS, and AM_STDBOOL_H.

	* src/system.h: Don't include pathmax.h
	Include <fcntl.h> and <unistd.h> unconditionally.
	Remove HAVE_DECL_* blocks.

2005-08-31  Jim Meyering  <jim@meyering.net>

	* man/Makefile.am (.x.1): Define PATH so help2man can find cppi.

	* src/cppi.l (pop): Avoid overflow-in-implicit-constant-conversion
	on 64-bit systems.
	("\""): Use %lu, not %d with size_t argument.

2005-05-08  Jim Meyering  <jim@meyering.net>

	* src/cppi.l: Don't include gettext.h -- system.h does that.
	Adjust type of parameters corresponding to line_number, so that
	they too have type `unsigned int'.

2004-01-24  Jim Meyering  <jim@meyering.net>

	* src/Makefile.am (cppi_SOURCES): Remove sys2.h.

2003-11-22  Jim Meyering  <jim@meyering.net>

	* src/cpp-cond.c: Regenerate with gperf-3.0.1.

	* lib/Makefile.am: Remove duplicate line: EXTRA_DIST += stdbool_.h.
	(libgnulib_a_SOURCES): Add exit.h.
	* lib/exit.h: New file.  From gnulib.

	* src/Makefile.am: Don't set ACLOCAL_AMFLAGS here.
