@@ -1,3 +1,9 @@
+2006-10-14  Jim Meyering  <jim@meyering.net>
+
+	* src/system.h (EXIT_FAILURE, EXIT_SUCCESS): Remove definitions.
+	Instead, include "exit.h".  This hereby retires the work-around for
+	"Sony NEWS-OS Release 4.0C"'s bug due to "#define EXIT_FAILURE 0".
+
 2006-09-21  Jim Meyering  <jim@meyering.net>
 
 	* configure.ac: Require autoconf-2.60 and automake-1.9.6.
